Try fixing a bug with content not fully visible on the top screen.

--- a/assets/css/_layout.scss
+++ b/assets/css/_layout.scss
@@ -89,6 +89,7 @@ body {
     align-items: center;
     position: relative;
     height: 100vh;
+    min-height: -webkit-fill-available;
     // max-height: 864px;
     background-image: url(../images/background-mobile.jpg);
     background-size: cover;
